Resolvendo problema do z-index no Modal

--- a/components/organisms/Modal/styles.module.scss
+++ b/components/organisms/Modal/styles.module.scss
@@ -14,7 +14,7 @@
     background: $gray;
     border-radius: 12px;
     margin: 10em;
-    z-index: 1;
+    z-index: 1031;
     opacity: 95%;
     padding: 10px;
 }
